5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4500/executions/1595_1017.log
== TEST (2019-06-14 09:15:35) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.


f1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))
rom math import*
tt2 = radians(float(input("Latitude de P2:")))
g2 = radians(float(input("Longitude de P2:")))
R= 6371.01
d=R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d, 2))
-- ERROR:
File "XXXX", line 8
    rom math import*
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-14 09:15:36) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.


f1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))
rom math import*
tt2 = radians(float(input("Latitude de P2:")))
g2 = radians(float(input("Longitude de P2:")))
R= 6371.01
d=R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d, 2))
-- EXECUTION TIME:
0.694653
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 8
    rom math import*
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-14 09:15:53) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.


f1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))
from math import*
tt2 = radians(float(input("Latitude de P2:")))
g2 = radians(float(input("Longitude de P2:")))
R= 6371.01
d=R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    f1 = radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-14 09:15:54) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.


f1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))
from math import*
tt2 = radians(float(input("Latitude de P2:")))
g2 = radians(float(input("Longitude de P2:")))
R= 6371.01
d=R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d, 2))
-- EXECUTION TIME:
0.792426
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1017/main.py", line 6, in <module>
    f1 = radians(float(input()))
NameError: name 'radians' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-14 09:16:12) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

t1 = radians(float(input("Latitude de P1: ")))
f1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))
from math import*
tt2 = radians(float(input("Latitude de P2:")))
g2 = radians(float(input("Longitude de P2:")))
R= 6371.01
d=R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    t1 = radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-14 09:16:14) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

t1 = radians(float(input("Latitude de P1: ")))
f1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))
from math import*
tt2 = radians(float(input("Latitude de P2:")))
g2 = radians(float(input("Longitude de P2:")))
R= 6371.01
d=R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d, 2))
-- EXECUTION TIME:
0.799491
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1017/main.py", line 5, in <module>
    t1 = radians(float(input()))
NameError: name 'radians' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-14 09:16:38) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

f1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))

from math import*

tt2 = radians(float(input("Latitude de P2:")))
g2 = radians(float(input("Longitude de P2:")))
R= 6371.01
d=R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    f1 = radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-14 09:16:40) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

f1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))

from math import*

tt2 = radians(float(input("Latitude de P2:")))
g2 = radians(float(input("Longitude de P2:")))
R= 6371.01
d=R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d, 2))
-- EXECUTION TIME:
0.785156
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1017/main.py", line 5, in <module>
    f1 = radians(float(input()))
NameError: name 'radians' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
